--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@excelwebzone/symfony-admin-ui",
+  "version": "0.1.0",
   "main": "src/js/index.js",
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
