--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "@excelwebzone/symfony-admin-ui",
   "version": "0.1.0",
-  "main": "src/js/index.js",
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.20.1",
+    "eslint": "^5.13.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
-    "sass-loader": "^6.0.6",
-    "webpack-notifier": "^1.6.0"
+    "sass-loader": "^6.0.6"
   },
   "license": "MIT",
   "scripts": {
-    "dev-server": "encore dev-server",
-    "dev": "encore dev",
-    "watch": "encore dev --watch",
-    "build": "encore production"
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "dependencies": {
     "antiscroll": "^1.0.0",
