--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "@excelwebzone/symfony-admin-ui",
   "version": "0.1.0",
-  "engines": {
-    "node": ">=6.0.0"
-  },
+  "main": "src/js/index.js",
   "devDependencies": {
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
