--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "@excelwebzone/symfony-admin-ui",
   "version": "0.1.0",
   "main": "src/js/index.js",
-  "devDependencies": {
-    "eslint": "^5.13.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "node-sass": "^4.7.2",
-    "popper.js": "^1.12.9",
-    "sass-loader": "^6.0.6"
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/excelwebzone/symfony-admin-ui.git"
   },
+  "author": "Michael H. Arieli",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/excelwebzone/symfony-admin-ui/issues"
+  },
+  "homepage": "https://github.com/excelwebzone/symfony-admin-ui",
   "scripts": {
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
@@ -40,5 +39,16 @@
     "recursive-iterator": "^2.0.3",
     "underscore": "^1.8.3",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "node-sass": "^4.7.2",
+    "popper.js": "^1.12.9",
+    "sass-loader": "^6.0.6"
   }
 }
