--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "dropzone": "^5.3.0",
+    "emoji-js": "^3.5.0",
     "form-serializer": "^2.5.0",
     "highcharts": "^7.1.2",
     "interactjs": "^1.3.4",
