--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antiscroll": "^1.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "cropperjs": "^1.5.11",
     "dropzone": "^5.3.0",
     "emoji-js": "^3.5.0",
     "form-serializer": "^2.5.0",
